Fixed the issue: After clicking submit button the box open collapse with footer

--- a/assets/helper.css
+++ b/assets/helper.css
@@ -11,7 +11,7 @@
   /* padding:40px 0; */
   background-color: #080808;
   color: #f8f4f4;
-  margin: 0;
+  margin-top: 96px;
   display: flex;
   justify-content: center;
   align-items: center;
